[package]
name = "quickbooks"
description = "An API client for the QuickBooks API"
version = "0.1.13"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/quickbooks"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true, features = ["chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
