[package]
name = "sendgrid"
description = "An API client for sending emails with SendGrid"
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"

[dependencies]
chrono = "0.4"
data-encoding = "2"
gsuite = { path = "../gsuite" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
