[package]
name = "sendgrid-api"
description = "An API client for sending emails with SendGrid"
version = "0.1.6"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/sendgrid-api"

[dependencies]
data-encoding = "2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
