[package]
name = "sheets"
version = "0.1.0"
authors = ["Jess Frazelle <acidburn@jessfraz.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
yup-oauth2 = { git = "https://github.com/dermesser/yup-oauth2", rev = "3d84ddd1782e1f1218427498c47069095915c4a8" }
