[package]
name = "sheets"
description = "An API client for Google Sheets"
version = "0.1.6"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/sheets"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
yup-oauth2 = "^4.1.3"
