[package]
name = "shippo"
description = "An API client for Shippo"
version = "0.1.29"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/shippo"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true, features = ["chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
