[package]
name = "tailscale-api"
description = "An API client for Tailscale"
version = "0.1.1"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/tailscale-api"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
