[package]
name = "tailscale-api"
description = "An API client for Tailscale"
version = "0.2.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/tailscale-api"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
httpmock = "0.6"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
