[package]
name = "tailscale-api"
description = "An API client for Tailscale"
version = "0.2.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/tailscale-api"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.6"
serde_json = "1.0"
tokio = { version = "1.24.1", features = ["macros"] }
